# BubbleBubble

./: .gitignore  CMakeLists.txt
cmake_helpers/: helpers_c.cmake
game_client/: CMakeLists.txt
game_client/assets/: game_objects_config.json
game_client/include/: GameClient.h  main.h
game_client/include/Graphics/: Renderer.h  SpritesManager.h
game_client/include/Renderer/: Renderer.h
game_client/src/: GameClient.cpp  main.cpp
game_client/src/Graphics/: Renderer.cpp  SpritesManager.cpp
game_client/src/Renderer/: Renderer.cpp  SpritesManager.cpp
game_core/: CMakeLists.txt
game_core/configs/: game_objects_config.json
game_core/include/Actors/: Actor.h  ActorFactory.h
game_core/include/Components/: Component.h  InputComponent.h  RigidBodyComponent.h  SpriteComponent.h  TransformComponent.h  VisualComponent.h  ai.h  animation.h  audio.h  lighting.h  networking.h  pathfinding.h  status.h  ui.h
game_core/include/Managers/: EventManager.h  Singleton.h
game_core/include/Physics/: PhysicsWorld.h
game_core/include/Utils/: EngineOptions.h  SDLutils.h  Utils.h
game_core/src/Actors/: Actor.cpp  ActorFactory.cpp
game_core/src/Components/: Component.cpp  RigidBodyComponent.cpp  SpriteComponent.cpp  VisualComponent.cpp
game_core/src/Managers/: EventManager.cpp
game_core/src/Physics/: PhysicsWorld.cpp
game_core/src/Utils/: EngineOptions.cpp  Utils.cpp
game_engine/: CMakeLists.txt
game_engine/include/Core/: sdl_methods.h
game_engine/src/Actors/: BaseCharacter.cpp  PlayerCharacter.cpp
game_engine/src/Core/GameScenes/: MainLevel.cpp
game_engine/src/GameObject/: ObjectPool.cpp
